--- a/pytest.ini
+++ b/pytest.ini
@@ -4,4 +4,4 @@ python_files = test_*.py
 python_functions = test_*
 addopts = -v --cov=app --cov-report=term-missing
 markers =
-    asyncio: mark test as async 
+asyncio_mode = auto
