--- a/scripts/julliuz-bot.service
+++ b/scripts/julliuz-bot.service
@@ -4,30 +4,12 @@ After=network.target postgresql.service redis.service
 
 [Service]
 Type=simple
-User=u1234567
-Group=u1234567
-WorkingDirectory=/home/u1234567/julliuz-bot
-Environment="PATH=/home/u1234567/julliuz-bot/venv/bin"
-Environment="PYTHONPATH=/home/u1234567/julliuz-bot"
-ExecStart=/home/u1234567/julliuz-bot/venv/bin/python -m app.bot.main
+WorkingDirectory=/root/julliuz-bot
+Environment="PATH=/root/julliuz-bot/venv/bin"
+Environment="PYTHONPATH=/root/julliuz-bot"
+ExecStart=/root/julliuz-bot/venv/bin/python /root/julliuz-bot/scripts/run_bot.py
 Restart=always
 RestartSec=10
-StandardOutput=syslog
-StandardError=syslog
-SyslogIdentifier=julliuz-bot
-
-# Configurações de segurança
-ProtectSystem=full
-ProtectHome=yes
-NoNewPrivileges=yes
-PrivateTmp=yes
-CapabilityBoundingSet=CAP_NET_BIND_SERVICE
-
-# Limites de recursos
-LimitNOFILE=65535
-LimitNPROC=65535
-MemoryLimit=512M
-CPUQuota=80%
 
 [Install]
-WantedBy=multi-user.target 
+WantedBy=multi-user.target
